--- a/src/main/resources/com/example/canteensystem/LoginLayout.fxml
+++ b/src/main/resources/com/example/canteensystem/LoginLayout.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.canteensystem.LoginController"
+            fx:controller="com.example.canteensystem.LoginLayoutController"
             prefHeight="300" prefWidth="400">
     <children>
         <VBox alignment="CENTER" layoutX="100" layoutY="75" spacing="10">
@@ -12,7 +12,7 @@
                 <TextField fx:id="usernameField" />
                 <Label text="Password:" />
                 <PasswordField fx:id="passwordField" />
-                <Button text="Login" onAction="#handleLogin" />
+                <Button text="Login" onAction="#handleSubmitButtonAction" />
             </children>
         </VBox>
     </children>
