--- a/src/main/resources/com/example/canteensystem/MainLayout.fxml
+++ b/src/main/resources/com/example/canteensystem/MainLayout.fxml
@@ -21,13 +21,13 @@
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Milk" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Bottle Water" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coca Cola" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Today's Meal" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Sandwich" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Cake" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coffee" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Milk - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Bottle Water - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coca Cola - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Today's Meal - 45.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Sandwich - 30.00" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Cake - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coffee - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="3" />
             </children>
         </GridPane>
     </children>
