--- a/src/main/resources/com/example/canteensystem/MainLayout.fxml
+++ b/src/main/resources/com/example/canteensystem/MainLayout.fxml
@@ -2,8 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -21,15 +24,27 @@
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Milk - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Bottle Water - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coca Cola - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Today's Meal - 45.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Sandwich - 30.00" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Cake - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <Button minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coffee - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <Button fx:id="Milk" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Milk - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Button fx:id="BottleWater" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Bottle Water - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <Button fx:id="CocaCola" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coca Cola - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Button fx:id="TodayMeal" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Today Meal - 45.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button fx:id="Sandwich" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Sandwich - 30.00" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Button fx:id="Cake" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Cake - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Button fx:id="Coffee" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coffee - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="3" />
             </children>
         </GridPane>
+        <HBox alignment="CENTER" spacing="10.0">
+            <children>
+                <ListView fx:id="cartList" prefHeight="150.0" prefWidth="200.0" />
+                <VBox alignment="CENTER" spacing="10.0">
+                    <children>
+                        <Button fx:id="purchaseButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" text="Purchase" onAction="#handlePurchaseClick" />
+                        <Label fx:id="purchaseStatusLabel" text="Purchase Status" />
+                        <Button fx:id="resetCartButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" text="Reset Cart" onAction="#handleResetCartClick" />
+                    </children>
+                </VBox>
+            </children>
+        </HBox>
     </children>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
