--- a/src/main/resources/com/example/canteensystem/MainLayout.fxml
+++ b/src/main/resources/com/example/canteensystem/MainLayout.fxml
@@ -24,13 +24,13 @@
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button fx:id="Milk" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Milk - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <Button fx:id="BottleWater" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Bottle Water - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                <Button fx:id="CocaCola" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coca Cola - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <Button fx:id="TodayMeal" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Today Meal - 45.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <Button fx:id="Sandwich" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Sandwich - 30.00" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <Button fx:id="Cake" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Cake - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <Button fx:id="Coffee" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coffee - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <Button fx:id="MilkBind" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Milk - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Button fx:id="BottleWaterBind" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Bottle Water - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <Button fx:id="CocaColaBind" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coca Cola - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Button fx:id="TodayMealBind" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Today Meal - 45.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button fx:id="SandwichBind" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Sandwich - 30.00" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Button fx:id="CakeBind" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Cake - 15.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Button fx:id="CoffeeBind" minHeight="100.0" minWidth="200.0" mnemonicParsing="false" text="Coffee - 10.00 kr" onAction="#handleButtonClick" GridPane.columnIndex="0" GridPane.rowIndex="3" />
             </children>
         </GridPane>
         <HBox alignment="CENTER" spacing="10.0">
