--- a/src/main/resources/com/example/canteensystem/LoginLayout.fxml
+++ b/src/main/resources/com/example/canteensystem/LoginLayout.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.canteensystem.LoginLayoutController"
-            prefHeight="300" prefWidth="400">
+
+<AnchorPane prefHeight="300" prefWidth="400" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.canteensystem.LoginLayoutController">
     <children>
         <VBox alignment="CENTER" layoutX="100" layoutY="75" spacing="10">
             <children>
@@ -12,7 +12,8 @@
                 <TextField fx:id="usernameField" />
                 <Label text="Password:" />
                 <PasswordField fx:id="passwordField" />
-                <Button text="Login" onAction="#handleSubmitButtonAction" />
+                <Button onAction="#handleSubmitButtonAction" text="Login" />
+                <Button mnemonicParsing="false" onAction="#handleGoToAdminLayout" text="Login som Admin" />
                 <Label fx:id="errorLabel" text="" textFill="RED" />
             </children>
         </VBox>
